Fixed minor alignment issue with language selector

--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -30,7 +30,8 @@ p
 
 .language-container
 {
-	width: 100%;
+	width: 60%;
+	margin: auto;
 	padding: .5rem;
 	text-align: center;
 }
